<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cos.premy.mines.OptionActivity"
    tools:showIn="@layout/activity_option">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="true"
            android:fillViewport="true"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ToggleButton
                    android:id="@+id/mode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textOff="@string/mode_easy"
                    android:textOn="@string/mode_hardcore" />

                <ToggleButton
                    android:id="@+id/color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="ToggleButton"
                    android:textOff="@string/black_and_white"
                    android:textOn="@string/colors" />

                <ToggleButton
                    android:id="@+id/numberType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="ToggleButton"
                    android:textOff="@string/number_type_line"
                    android:textOn="@string/number_type_number" />

                <ToggleButton
                    android:id="@+id/flood"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="ToggleButton"
                    android:textOff="@string/flood_manual"
                    android:textOn="@string/flood_auto" />

                <TextView
                    android:id="@+id/labelNumLevels"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/number_levels" />

                <SeekBar
                    android:id="@+id/numLevels"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="6"
                    android:progress="0" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
